# lambda

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  default.nix  lambda.cabal  lambda.hs  release.nix  shell.nix
app/: Main.hs
examples/: fac.lambda
src/Language/: Lambda.hs
src/Language/Lambda/: Parser.hs
test/Language/: LambdaSpec.hs
test/Language/Lambda/: ParserSpec.hs
