cabal-version:       >=1.10

name:                lambda
version:             0.1
synopsis:            A De Bruijn indexed lambda calculus interpreter
description:         See README.md
home-page:           https://github.com/luc65r/lambda#readme
bug-reports:         https://github.com/luc65r/issues
license:             MIT
license-file:        LICENSE
author:              Lucas Ransan
maintainer:          lucas@ransan.tk
copyright:           2020 Lucas Ransan
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Language.Lambda, Language.Lambda.Parser
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable lambda
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*, lambda
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Language.LambdaSpec
  build-depends:       base == 4.*, hspec == 2.*, lambda
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:         -Wall
